--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>You should change this on every page</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <!-- The relates to the Google Font used in h1 -->
-    <link href='https://fonts.googleapis.com/css?family=Caesar Dressing' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
     <div class="header">
-      <img src="images/DTportfolio_header.png">
+      <img src="images/header.png">
     </div>
   </head>
   <div class="wrapper">
@@ -43,27 +43,27 @@
       <div class='container'>
         <!-- item 1 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">       
+          <img src="images/double pink butterflies.jpg" alt="pink butterflies">       
         </div> 
         <!-- end of item 1 -->    
         <!-- item 2 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
+          <img src="images/violin-and-bow-square.jpg" alt="viola/violin">      
         </div> 
         <!-- end of item 2 -->    
         <!-- item 3 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
+          <img src="images/images.jpg" alt="cat">      
         </div>  
         <!-- end of item 3 -->
         <!-- item 4 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
+          <img src="images/8a5bd8c650c1620c22126eb167b47e1026-taylorswift.1x.rsquare.w1400.jpg" alt="taylor swift">      
         </div>  
         <!-- end of item 4 -->
         <!-- item 5 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
+          <img src="images/Screen-Shot-2020-05-14-at-2.24.29-PM-700x700-c-default.jpg" alt="please replace me">      
         </div>  
         <!-- end of item 5 -->
         <!-- item 6 starts here-->
@@ -84,7 +84,7 @@
       </div>
     </main>  
     <footer>
-      <p>&#169;Copyright Your Name 2024</p>
+      <p>&#169;Copyright Lily Adams 2024</p>
     </footer>
   </body>
 </html>
