added more pictures

--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
         <!-- end of item 4 -->
         <!-- item 5 starts here-->
         <div class='item'>
-          <img src="images/Screen-Shot-2020-05-14-at-2.24.29-PM-700x700-c-default.jpg" alt="please replace me">      
+          <img src="images/Screen-Shot-2020-05-14-at-2.24.29-PM-700x700-c-default.jpg" alt="burnside high school">      
         </div>  
         <!-- end of item 5 -->
         <!-- item 6 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">       
+          <img src="images/Peach-Sweet-Tea-SQUARE.jpg" alt="iced tea">       
         </div> 
         <!-- end of item 6 -->    
         <!-- item 7 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
+          <img src="images/ddofy21nfriz.jpg" alt="coffee">      
         </div> 
         <!-- end of item 7 -->    
         <!-- item 8 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">      
+          <img src="images/Image_Editor.png" alt="schubert sonata">      
         </div>  
         <!-- end of item 8 -->
       </div>
