Image creation pictures and writing
Image creation pictures and writing

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
       <!-- now the Information text box-->
       <div class=information>
         <p>
-            Here you could introduce yourself. Your likes, dislikes etc <br><br>
-            Here you can take about what you learnt last year and what you are looking forward to learning this year. 
+            My name is Lily Adams and I a year 10 student at Burnside High School. This website is my digital technologies portfolio and will showcase the work I have done in digital tech this year.
+
+          I play the viola in SMP at BHS, and my favourite animal is a cat. I enjoy drinking tea and coffee and listening to Taylor Swift.
         </p>  
       </div>   
         <!-- This is the container for all the images you want to add- it's a flexbox so add as many as you want -->
