--- a/imagecreation.html
+++ b/imagecreation.html
@@ -8,7 +8,7 @@
     <!-- The relates to the Google Font used in h1 -->
     <link href='https://fonts.googleapis.com/css?family=Caesar Dressing' rel='stylesheet'>
     <div class="header">
-      <img src="images/DTportfolio_header.png">
+      <img src="images/header.png">
     </div>
   </head>
   <div class="wrapper">
@@ -35,28 +35,28 @@
       <div class='container'>
         <!-- item 1 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">
+          <img src="images/picturelayering.png" alt="picture layering">
           <div class='item-info'>
             <!-- a brief explanation of what this picture is -->
-            <h5>What is this?</h5>
+            <h5>This is my picture layering exercise. I created a backdrop that has different layers to create a landscape.</h5>
           </div>       
         </div> 
         <!-- end of item 1 -->    
         <!-- item 2 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">
+          <img src="images/catcustompixel.png" alt="cat pixel picture">
           <div class='item-info'>
             <!-- a brief explanation of what this picture is -->
-            <h5>What is this?</h5>
+            <h5>This is my pixel art. I created a picture of a cat and used a gradient effects in the background.</h5>
           </div>       
         </div> 
         <!-- end of item 2 -->    
         <!-- item 3 starts here-->
         <div class='item'>
-          <img src="images/placeholder.png" alt="please replace me">
+          <img src="images/snowflake inkscape.png" alt="please replace me">
           <div class='item-info'>
             <!-- a brief explanation of what this picture is -->
-            <h5>What is this?</h5>
+            <h5>This is my snowflake design. I used many different techniques to create four different snowflakes.</h5>
           </div>       
         </div> 
         <!-- end of item 3 --> 
@@ -64,14 +64,13 @@
         <div class=information>
           <h2>Evaluation</h2>
           <p>
-            This is where you put your evaluation. You should delete this and write about your learning. What software did you use? What skills did you learn? Was it enjoyable? Did you learn a lot? How could you extend this? <br><br>
-            Maybe you could come up with a way you could use these skills for your term 4 project. 
+            In the Image Creation module, I learnt how to use software such as Gimp and Inkscape and created many edited images. I learnt how to manipulate basic images in both Gimp and Inkscape. I created 7 images, and I enjoyed this topic because of how creative we could be.<br><br>
+            I could extend my knowledge of this topic by incorporating it into my end of year project.
           </p>  
         </div>   
       </div>   
     </main>  
     <footer>
-      <p>&#169;Copyright Your Name 2024</p>
+      <p>&#169;Copyright Lily Adams 2024</p>
     </footer>
   </body>
-</html>
